data-git/worldmodel/worldmodel/test/requirement-test-constraints.p.pddl
(define
 (problem REQUIREMENT-TEST-CONSTRAINTS)
 (:domain REQUIREMENT-TEST-CONSTRAINTS)
 (:objects obj2 obj1 - type1)
 (:init
  (pred1 obj1))
 (:goal
  (and
   (pred1 obj2))))